Fixed results overlap error in style.css

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 #resultsContainer {
     width: 1012px;
     position: absolute;
-    top: 300px;
+    top: 330px;
     visibility: hidden;
 }
 
